# profiles-rest-api

./: .pre-commit-config.yaml  pyproject.toml
core/: settings.py  urls.py
examples/: urls.py  views.py
profiles/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_profilefeeditem.py
